StrAPI/Manifests/app-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  app-dev-service
  namespace: default
spec:
  selector:
    app: app-dev
  ports:
  - port: 80
    targetPort: 1337
  type: LoadBalancer
  loadBalancer:
  ingress:
  - ip: 35.222.150.83
