StrAPI/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: claw
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: claw
